@@ -42,6 +42,9 @@ sQuote() now defaults to type="cmd" on Windows.
 R can now be built with Unicode support on Win9x and WinME.  Set
 SUPPORT_UTF8 to YES in src/gnuwin32/MkRules.
 
+R can now be built with support of multibyte character sets,
+e.g. Japanese. See INSTALL.
+
 
 
 R 2.0.1 patched
